Update copyright year and fix version compatibility error